--- a/versuche/polarisation/polarisation.tex
+++ b/versuche/polarisation/polarisation.tex
@@ -3,7 +3,7 @@
 \input{preamble/packages}
 \input{preamble/title}
 
-%\addbibresource{bibliography/bibliography.bib}
+\addbibresource{bibliography/bibliography.bib}
 
 \begin{document}
     \input{titlepage/titlepage}
@@ -14,7 +14,7 @@
     \include{sections/diskussion}
     %\printbibliography
 
-    %\appendix
-    %\includepdf[pages=-]{images/messungen_excel.pdf}
+    \appendix
+    \includepdf[pages=-]{excel/messungen.pdf}
 \end{document}
 
