--- a/versuche/polarisation/bibliography/bibliography.bib
+++ b/versuche/polarisation/bibliography/bibliography.bib
@@ -2,5 +2,9 @@
     title = {Reibwerte},
     howpublished = {\url{http://www.schweizer-fn.de/stoff/reibwerte/reibwerte.php}},
     note = {Abgerufen, 16-11-21 17:40}
+},
+@misc{ref:waveplate_calculator,
+    title = {Waveplate Calculator},
+    howpublished = {\url{http://www.optocity.com/waveplate-calculator.htm}},
+    note = {Abgerufen, 28-11-16 11:15}
 }
-
