--- a/versuche/polarisation/polarisation.tex
+++ b/versuche/polarisation/polarisation.tex
@@ -15,6 +15,6 @@
     %\printbibliography
 
     \appendix
-    \includepdf[pages=-]{excel/messungen.pdf}
+    \includepdf[pages=-]{images/excel-messungen.pdf}
 \end{document}
 
