--- a/versuche/polarisation/sections/arbeitsgrundlagen.tex
+++ b/versuche/polarisation/sections/arbeitsgrundlagen.tex
@@ -188,4 +188,11 @@ Eine Lambdaviertelplatte wird folglich repr\"asentiert durch:
     \end{pmatrix}
 \end{equation}
 
+Die Strahlungsintensit\"at kann berechnet werden, indem die x- und y-Komponenten quadriert und addiert werden.
 
+\begin{equation}
+    I = I_0 \cdot \left(E_xE^*_x + E_yE^*_y\right)
+    \label{eq:intensitaet}
+\end{equation}
+
+$E_x^*$ und $E_y^*$ sind komplex konjugiert.
