--- a/versuche/polarisation/sections/diskussion.tex
+++ b/versuche/polarisation/sections/diskussion.tex
@@ -3,9 +3,7 @@
 Die  berechneten  Werte  sind  als  Tabelle  nochmals  zusammengefasst  (Tabelle
 \ref{tab:zusammenfassung}).
 
-Es  war  schwierig, vergleichbare Reibkoeffizienten zu  finden.  Hier  sind  die
-beiden        Gleitreibkoeffizienten         verglichen         mit         zwei
-Literaturwerten\cite{ref:reibwerte}:
+Ich fand diese Aufgabe sehr interessant. 
 
 \begin{table}[ht!]
     \begin{center}
